5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1621_2937.log
== TEST (2019-04-01 19:09:29) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=float(t+v)
print(())
-- ERROR:
File "XXXX", line 5
    claperon=float(t+v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:39) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=int(t+v)
print(())
-- ERROR:
File "XXXX", line 5
    claperon=int(t+v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:09:51) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=int(input(t+v))
print(())
-- ERROR:
File "XXXX", line 5
    claperon=int(input(t+v))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:00) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=float(input(t+v))
print(())
-- ERROR:
File "XXXX", line 5
    claperon=float(input(t+v))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:10:11) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=(t+v)
print(())
-- ERROR:
File "XXXX", line 5
    claperon=(t+v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:22) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=(t+v)
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon=(t+v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:33) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=input(t+v)
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon=input(t+v)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:43) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon= t+v
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon= t+v
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:43) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=float(p+t)  
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon=float(p+t)  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:14:23) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=float(p*v)  
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon=float(p*v)  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:14:44) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
claperon=(p*v)  
print(p*(claperon))
-- ERROR:
File "XXXX", line 5
    claperon=(p*v)  
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:15:42) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
pressao=(t+p)
print((claperon))
-- ERROR:
File "XXXX", line 5
    pressao=(t+p)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:17:24) 
-- CODE:
p=int(input("pressao:"))
n=int(input("numero de mols:"))
v=int(input("volume:"))		
t=int(input("graus celsius:")
pressao=(p*v=n+r+t)
print((claperon))
-- ERROR:
File "XXXX", line 5
    pressao=(p*v=n+r+t)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:29:21) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=int(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '320.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:03) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float("numero de mols:")
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=float("numero de mols:")
ValueError: could not convert string to float: 'numero de mols:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:10) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float("numero de mols:")
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=float("numero de mols:")
ValueError: could not convert string to float: 'numero de mols:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:29) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:07) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float("graus celsius:")
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float("graus celsius:")
ValueError: could not convert string to float: 'graus celsius:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:30) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float("graus celsius:")
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float("graus celsius:")
ValueError: could not convert string to float: 'graus celsius:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:52) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:32:19) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print()

-- EXECUTION TIME:
0.134924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:57) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(n*p*t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:23) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(n*p*t)

-- EXECUTION TIME:
0.174626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:50) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(p+n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:08) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(p+n)

-- EXECUTION TIME:
0.1562
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:53) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(round(p+n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:52) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float(input("graus celsius:"))
p=(pressao*n)
print(round(p+n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:22) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=float("graus celsius:")
p=(pressao*t)
print(round(p+n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float("graus celsius:")
ValueError: could not convert string to float: 'graus celsius:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:51) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print(round(p+n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:49:07) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print(round(p+n))

-- EXECUTION TIME:
0.172633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:49:16) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p+n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:49:33) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p+n))

-- EXECUTION TIME:
0.206582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:39) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:58) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*n)
print((p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:51:16) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p))

-- EXECUTION TIME:
0.185243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:17) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:30) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:51:41) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print((p))

-- EXECUTION TIME:
0.1909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:57) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print(round(p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:52:10) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=(pressao*t)
print(round(p))

-- EXECUTION TIME:
0.167538
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:54) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(round(p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:09) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(round(p))

-- EXECUTION TIME:
0.15222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:18) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:32) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:54:46) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(p)

-- EXECUTION TIME:
0.175894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2937/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:02:55) 
-- CODE:
pressao=int(input("equacao de clayperon:"))
n=float(input("numero de mols:"))
v=float(input("volume:"))		
t=int(input("graus celsius:"))
p=float(n*pressao*t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
